--- a/docs/developers/index.mdx
+++ b/docs/developers/index.mdx
@@ -1,47 +1,19 @@
 ---
+title: Numeraire for Developers
 sidebar_position: 1
+image: /img/social.png
 ---
 
-# Tutorial Intro
+Happy that you are interested in integrating and building on Bitcoin! We are here to help you get started.
 
-Let's discover **Docusaurus in less than 5 minutes**.
+:::info
+This documentation is a work in progress, we strongly appreciate any feedback or contribution you may have. Theses docs are open source and can be found on [**GitHub**](https://github.com/bitcoin-numeraire/doc)
+:::
 
-## Getting Started
+## API Access
 
-Get started by **creating a new site**.
+Whether registering a [Numeraire Account](account/index.mdx) or deploying your own [Numeraire SwissKnife](swissknife/index.mdx), developers can access all the features via [API Keys](developers/api-keys.mdx) and [webhooks](developers/webhooks.mdx) through the [REST API](https://api.numeraire.tech/docs).
 
-Or **try Docusaurus immediately** with **[docusaurus.new](https://docusaurus.new)**.
-
-### What you'll need
-
-- [Node.js](https://nodejs.org/en/download/) version 18.0 or above:
-  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.
-
-## Generate a new site
-
-Generate a new Docusaurus site using the **classic template**.
-
-The classic template will automatically be added to your project after you run the command:
-
-```bash
-npm init docusaurus@latest my-website classic
-```
-
-You can type this command into Command Prompt, Powershell, Terminal, or any other integrated terminal of your code editor.
-
-The command also installs all necessary dependencies you need to run Docusaurus.
-
-## Start your site
-
-Run the development server:
-
-```bash
-cd my-website
-npm run start
-```
-
-The `cd` command changes the directory you're working with. In order to work with your newly created Docusaurus site, you'll need to navigate the terminal there.
-
-The `npm run start` command builds your website locally and serves it through a development server, ready for you to view at http://localhost:3000/.
-
-Open `docs/intro.md` (this page) and edit some lines: the site **reloads automatically** and displays your changes.
+:::tip
+If you cannot find what you are looking for, we will be happy to discuss with you potential new features or improvements. Please reach out to us by opening a [**GitHub issue**](https://github.com/swissknife/issues) or by contacting us on [**Twitter**](http://x.com/NumeraireBTC) or [**Nostr**](https://nostr.com/npub1m8pwckdf3n5lyd2m463ad3u4kk98qmwfs9s7hrmj6knd07frenlsfr0uje)
+:::
