--- a/docs/account/index.mdx
+++ b/docs/account/index.mdx
@@ -1,47 +1,27 @@
 ---
+title: Numeraire Account
 sidebar_position: 1
+image: /img/social.png
 ---
 
-# Tutorial Intro
+Numeraire Account is the easiest gateway to the Bitcoin ecosystem.
 
-Let's discover **Docusaurus in less than 5 minutes**.
+You can get started by [registering a Numeraire account](account/register.mdx).
 
-## Getting Started
+<div class="center-container">
+  <img
+    src="/img/article_images/account/wallet_overview.png"
+    alt="Numeraire Account"
+  />
+</div>
 
-Get started by **creating a new site**.
+### What can I do with a Numeraire Account?
 
-Or **try Docusaurus immediately** with **[docusaurus.new](https://docusaurus.new)**.
-
-### What you'll need
-
-- [Node.js](https://nodejs.org/en/download/) version 18.0 or above:
-  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.
-
-## Generate a new site
-
-Generate a new Docusaurus site using the **classic template**.
-
-The classic template will automatically be added to your project after you run the command:
-
-```bash
-npm init docusaurus@latest my-website classic
-```
-
-You can type this command into Command Prompt, Powershell, Terminal, or any other integrated terminal of your code editor.
-
-The command also installs all necessary dependencies you need to run Docusaurus.
-
-## Start your site
-
-Run the development server:
-
-```bash
-cd my-website
-npm run start
-```
-
-The `cd` command changes the directory you're working with. In order to work with your newly created Docusaurus site, you'll need to navigate the terminal there.
-
-The `npm run start` command builds your website locally and serves it through a development server, ready for you to view at http://localhost:3000/.
-
-Open `docs/intro.md` (this page) and edit some lines: the site **reloads automatically** and displays your changes.
+- Access to a powerful and user-friendly dashboard
+- Send and receive Bitcoin at the speed of light
+- Register a LN address (*your_username@numeraire.tech*)
+- Send and receive Zaps on Nostr
+- Sort and filter your transactions
+- Manage a list of contacts
+- Generate invoices
+- And much more...
