--- a/docs/swissknife/configuration/ln-providers.mdx
+++ b/docs/swissknife/configuration/ln-providers.mdx
@@ -35,7 +35,7 @@ Core Lightning offers a gRPC and REST API, both supported.
 
 See the configuration values for Core Lightning gRPC [here](swissknife/configuration/index.mdx#core-lightning-provider-grpc).
 
-### REST (`ln_provider = "clnrest`)
+### REST (`ln_provider = "clnrest"`)
 
 See the configuration values for Core Lightning REST [here](swissknife/configuration/index.mdx#core-lightning-provider-rest).
 
