add new features

--- a/docs/account/index.mdx
+++ b/docs/account/index.mdx
@@ -24,4 +24,5 @@ You can get started by [registering a Numeraire account](account/register.mdx).
 - Sort and filter your transactions
 - Manage a list of contacts
 - Generate invoices
+- Programmatically access your account with API Keys
 - And much more...
