--- a/docs/swissknife/index.mdx
+++ b/docs/swissknife/index.mdx
@@ -32,6 +32,8 @@ installing SwissKnife on your own hardware, either on your desktop, on a Raspber
 - Data availability through pagination and advanced search.
 - Advanced [Dashboard](https://github.com/bitcoin-numeraire/swissknife-dashboard).
 - Runs in the cloud, on your desktop or on a Raspberry Pi (or similar).
+- [`Nostr`](https://github.com/nostr-protocol/nips/blob/master/05.md). NIP-05 and Zap support through your Lightning Address.
+- API keys authentication
 
 ## Lightning Providers
 
@@ -49,4 +51,7 @@ SwissKnife allows direct Lightning integration, supporting the most used node im
   - Non-custodial
   - Automatic node management.
   - Automatic liquidity management via LSPs (user can switch LSPs)
-  
+- [`LND`](https://github.com/lightningnetwork/lnd)
+  - Non-custodial
+  - Run your own node
+  - Manage your own liquidity
